--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,2 +1,8 @@
 blank_issues_enabled: false
 projects: ["department-of-veteran-affairs/va-mobile-feature-support"]
+
+contact_links:
+  - name: Feature request
+    url: https://github.com/department-of-veteran-affairs/va-mobile-feature-support/issues/new?assignees=&labels=enhancement&template=feature_request.md&title=[Feature]%20
+    about: Use this link to request a new feature in the correct repository.
+
